Fix overlapping issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -440,9 +440,11 @@ ul {
 
       .stack-logo {
          height: 20px;
+
          svg {
-            width: 20px;
-         }
+           width: 20px;
+           vertical-align: top;
+          }
       }
          
          #react {
@@ -461,6 +463,7 @@ ul {
          }
          #mongo {
             width: 12px;
+            transform: translateY(-10%);
          }
 	}
 }
